deploy/vanilla-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-deployment
spec:
  selector:
    matchLabels:
      app: golang-app
  replicas: 1
  strategy:
    type: "RollingUpdate"
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: golang-app
    spec:
      containers:
      - name: golang
        image: docker.pkg.github.com/kahootali/golang-sample-app/golang-sample-app:v1.2.2
        ports:
        - containerPort: 8080
          name: tcp
      imagePullSecrets:
      - name: image-secret
