deploy/vanilla-manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: golang-app
spec:
  selector:
    app: golang-app
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
