deploy/vanilla-manifests/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: counter-go
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: golang-app
    weight: 100
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
